--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
         <!-- section 1 -->
         <section class="sec1">
             <div class="sec1left">
-                <h1>Product Page</h1>
+                <h1>Product <br> Page</h1>
                 <p>We buil this template to help
                     you create modern and beautiful
                     marketing page.
                 </p>
-                <button>Downloand it now</button>
-                <button>Features</button>
+                <div class="botones">
+                <button class="boton2"><b>Downloand it now</b></button>
+                <button class="boton3"><b>Features</b></button>
+                </div>
             </div>
             <div class="img">
              <img src="./assets/phone.png" alt="Imagen de celular">
@@ -37,24 +39,28 @@
         </section>
 
         <!-- section 2 -->
-        <section>
+        <section class="sec2">
             <h2>Fonctionnalités</h2>
-            <img src="./assets/laptop.png" alt="Imagen de laptop">
+            
+            <div class="derecho">
+                <img src="./assets/laptop.png" alt="Imagen de laptop">
+                <div class="texto">
             <h3>Alpha Screenshot</h3>
             <p>This is a placehoder text. Replace it with your
-                awesome call to action text. Develop stunning
+                awesome call to action text. Develop stunning 
                 product website easily this template.
             </p>
             <h4>-- Marketing Page</h4>
-            <ul>
-                <li>Based on Bootstrap 4</li>
-                <li>Moder and creative</li>
-                <li>Optimized for mobile devices</li>
-            </ul>
+            <p>Based on Bootstrap 4</p>
+            <p>Moder and creative</p>
+            <p>Optimized for mobile devices</p>
+                </div>
+           
+            </div>
         </section>
 
         <!-- section 3 -->
-        <section>
+        <section class="sec3">
             <h5>Plan & Pricing</h5>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum suscipit debitis facere nisi itaque sequi, dolore qui numquam blanditiis quos nihil dolor doloremque vitae illo assumenda voluptatum dolorum ab? Sint.
