--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
         <section class="sec2">
             <h2>Fonctionnalités</h2>
             <div class="derecho">
-                <img src="assets/laptop.png" alt="Imagen de laptop">
+                <img src="assets/laptop.png" alt="Imagen de laptop" class="im1">
                 <div class="texto">
             <h3>Alpha Screenshot</h3>
             <p>This is a placehoder text. Replace it with your
                 awesome call to action text. Develop stunning 
                 product website easily this template.
             </p>
-            <h4>-- Marketing Page</h4>
-            <p>Based on Bootstrap 4</p>
-            <p>Moder and creative</p>
-            <p>Optimized for mobile devices</p>
+            <h4>— Marketing Page</h4>
+            <p><img src="assets/comprobar.png" alt="" class="im2">Based on Bootstrap 4</p>
+            <p><img src="assets/comprobar.png" alt="" class="im2">Moder and creative</p>
+            <p><img src="assets/comprobar.png" alt="" class="im2">Optimized for mobile devices</p>
                 </div>
            
             </div>
